--- a/index.html
+++ b/index.html
@@ -5,10 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document-of-playback</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital@1&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 
 </head>
 <body>
-    
+   <section class="top-banner">
+    <div class="half-width">
+    <h1>Welcome To </h1>
+    <h1><span class="marchar">Bpraak World</span> 2022!</h1>
+    <h3>build singer and vanished rioter</h3>
+    <p>hello world 2022 ! i hope this year will come 4 all of you a lots of opportunity and a lots passion so on.plsease do not wait that you thought whenevr everything will be ready in that time i will set journey so i suggest you never wil come specific season in your life if you do not wake up so far by of yourself.  </p>
+    <a class="link-button" target="_blank"href="https://youtu.be/ZTBwxy4wsBQ">watch me</a>
+
+    </div>
+    <div class="half-width">
+        <img src="images/bpraak-bg.png" alt="">
+    </div>
+   </section>
 </body>
 </html>
