--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="half-width">
     <h1>Welcome To </h1>
     <h1><span class="marchar">Bpraak World</span> 2022!</h1>
-    <h3>build singer and vanished rioter</h3>
+    <h3>Build Singer And Vanished Rioter</h3>
     <p>hello world 2022 ! i hope this year will come 4 all of you a lots of opportunity and a lots passion so on.plsease do not wait that you thought whenevr everything will be ready in that time i will set journey so i suggest you never wil come specific season in your life if you do not wake up so far by of yourself.  </p>
     <a class="link-button" target="_blank"href="https://youtu.be/ZTBwxy4wsBQ">watch me</a>
 
@@ -24,6 +24,18 @@
     <div class="half-width">
         <img src="images/bpraak-bg.png" alt="">
     </div>
+   </section>
+   <section class="dream big">
+       <div class="half-width" >
+           <img src="images/bpraak2.png">
+       </div>
+       <div class="half-width" >
+           <h1>Think Big</h1>
+           <h2>Become A Man like Man </h2>
+           <p>this is a stupid advice of mine if you do not agree with me thanks. so do not find motivational story becose that things can do deepressed you.so avoid anyone succesfull story.2022 </p>
+           <a class="link-button" target="_blank"href="https://youtu.be/zPFXO2dTejI">lisen to me</a>
+       </div>
+       
    </section>
 </body>
 </html>
