footer and something added

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 </head>
 <body>
-   <section class="top-banner">
+   <section class="top-banner upcoming-day">
     <div class="half-width">
     <h1>Welcome To </h1>
     <h1><span class="marchar">Bpraak World</span> 2022!</h1>
@@ -25,7 +25,7 @@
         <img src="images/bpraak-bg.png" alt="">
     </div>
    </section>
-   <section class="dream big">
+   <section class="dream-big upcoming-day">
        <div class="half-width" >
            <img src="images/bpraak2.png">
        </div>
@@ -37,5 +37,25 @@
        </div>
        
    </section>
+   <section class="experience-area">
+       <h1>Sacrify</h1>
+       <div class="upcoming-day">
+        <div id="ak-51"class="genius-t">
+            <h2>Thinking Process Of A Normal Person</h2>
+            <h3 class="marchar">Guess About Of 8 klm</h3>
+            <p>if you see around of our circumstances genuinely you will get that most of the cheap persons they always disscuss about eight klm that is not enough to flourishing our-self. so star Thinking out of 8klm.</p>
+        </div>
+        <div id="ak-50" class="genius-t">
+         <h2>Thinking Process Of A Genius</h2>
+         <h3 class="marchar">Guess About Of Out Of Surrounding</h3>
+         <p>so this is unique lession to me guess as a student anyway long long ago i heard a word that is "lazy" so after listened that word i believe that a lazy guy is much more smart than a skillful guy .behind this sentences that "a skillful earns something after selling skill"  </p>
+        </div>
+       </div>
+           
+
+   </section>
+   <footer>
+       <p>@Welcome to here 2022,bpraak world-45421</p>
+    </footer>
 </body>
 </html>
